# quadcopter

./: .gitignore  readme.md
arduino/: format-code.sh
arduino/flt_controller/: blinkled.hpp  debug.hpp  flt_controller.ino  imu.hpp  motors.hpp  packer.hpp
arduino/flt_controller_2/: sensor.hpp
arduino/flt_controller_3/: blinkled.hpp  flt_controller_3.ino  heartbeat.hpp  imu.hpp  motors.hpp  pres_temp.hpp  sensor.hpp  toggle.hpp
arduino/gecko/: gecko.ino
arduino/motor_test/: motor_test.ino  motors.hpp
arduino/nav_gps/: motors.hpp  nav_gps.ino
arduino/pass_thru/: pass_thru.ino
arduino/quadcopter/: motors.hpp  quadcopter.ino
arduino/src/: library.properties  quad_msgs.hpp  quadcopter.hpp
cpp/: CMakeLists.txt  gci_gps  gci_sensors  readme.md  yivo
cpp/dev/: CMakeLists.txt  accels.cpp  ext_int.cpp  gps.cpp  iir_filter.cpp  mags.cpp  multi_core.cpp  press_alt.cpp  servo.cpp  servo2.cpp  servopio.cpp  timer.cpp  timer2.cpp  udp.cpp  ultrasound.cpp  usb.cpp
cpp/include/: filter.hpp  quad_msgs.hpp  quadcopter.hpp  updated.hpp
cpp/include/boards/: Adafruit_ItsyBitsy_M4.hpp  Pi_Pico.hpp  generic.hpp
cpp/src/: MadgwickAHRS.hpp  adc.hpp  blink.pio  bus.cpp  command.hpp  defs.hpp  fifo.hpp  filters.hpp  flags.hpp  fsensors.hpp  gps.hpp  i2c.hpp  led.hpp  main.cpp  main_core_1.hpp  memory.hpp  navigator.cpp  performance.hpp  picolib  pwm.hpp  sensor_funcs.hpp  states.hpp  trigger.hpp  uart.hpp
cpp/src/filters/: filters.hpp  kf_1d.hpp
cpp/src/ins_nav/: common.hpp  wgs.hpp  wgs84.hpp
cpp/src/messaging/: mavlink_comm.hpp  messages.hpp  yivo_comm.hpp
cpp/src/picolib/: adc.hpp  fifo.hpp  mutex.hpp  picolib.hpp  pwm.hpp  rtc.hpp  spi.hpp  time.hpp  uart.hpp  usb.hpp  watchdog.hpp
data/test/: 2023-08-27_16-02-12_test.json  2023-08-27_16-03-18_test.json  2023-08-27_16-05-11_test.json
docker/docker-build/: Dockerfile  bus.ini  docker-compose.yml  get_src.sh  readme.md
docker/docker-supervisor/: Dockerfile  docker-compose.yml  nav.ini  supervisord.conf
docs/: ascii.md  esc.md  filters.md  low-pass-filters.md  motor.md  readme.md
docs/afroflight/: afroflight.md
docs/controller/: controller.md
docs/dynamics/: dynamics.md
docs/electronics/: mosfets.md
docs/esc/: readme.md
docs/fixed_point_math/: fixed_point_math.md
docs/freertos/: freertos.md
docs/kevin/: flight_controller.md  test.adoc
docs/matek/: matek_power_distro_board.md
docs/mavlink/: mavlink_c.md  mavlink_python.md
docs/motors/: motor.md
docs/multicore/: multicore.md
docs/nRF24L01/: nRF24L01.md
docs/notebooks/: plot_data-save.ipynb
docs/notebooks/ekf/: ekf-vaderpol.ipynb  errors.ipynb
docs/nuttx/: nuttx.md
docs/pi_pico/: readme.md
docs/pi_pico/external_interrupt/: ext_interrupt.md
docs/pi_pico/network/: udp.md
docs/pi_pico/pwm_servos/: pwm_servos.md
docs/pi_pico/spi/: spi.md
docs/pi_pico/timer_callbacks/: timer_callbacks.md
docs/px4/: ekf.md
docs/sensor_fusion/: accels_n_gyros.md
docs/ultrasonics/: ultrasonics.md
gecko2/arduino/test/: test.ino
gecko2/arduino/yivo-data/: controller.hpp  sensor_suite.hpp  yivo-data.ino
gecko2/python/: gui-curses.py  telemetry-stream.py  yivo_msgs.py  yivo_parser.py
gecko2/python/jupyter/: ekf.ipynb  yivo_msgs.py  yivo_parser.py
messages/: calibration_t.toml  global.toml  heartbeat.toml  imu_raw_t.toml  imu_t.toml  readme.md
notebooks/1D_kf/: kf.ipynb
notebooks/calibration/calibration-accelerometer/: calibrate-accelerometers-and-gyros.ipynb
notebooks/calibration/calibration-magnetometer/: calibrate-magnetometer.ipynb
notebooks/ekf/: ekf-quadcopter-2.ipynb  ekf-quadcopter.ipynb  ekf-vaderpol.ipynb  errors.ipynb  quaternion-ekf.ipynb
notebooks/filters/: sensor_filters.ipynb
notebooks/iir_filters/: sensor_filters.ipynb
notebooks/sensors/: accel_roll_pitch.ipynb  plot_data.ipynb
notebooks/ukf/: ukf.ipynb  ukf.py
python/: get_data.py  joystick.py  keyboard.py  readme.md  sensor_read.py  sensor_read_text.py  sim.py  telemetry.py
python/dronesim/: __init__.py  drone.py  dynamics.py  enums.py  mav_conn.py  sensors.py  serial_conn.py  yivo_conn.py
python/gui/: gui-curses.py
python/hud/: main.py
python/jupyter/ekf/: ekf-quadcopter-2.ipynb  ekf-quadcopter.ipynb
python/udp/: listen.py
reorg/arduino/flt_controller/: flt_controller.ino  motors.hpp
reorg/arduino/flt_controller_2/: flt_controller_2.ino  imu.hpp  motors.hpp  pres_temp.hpp
reorg/arduino/flt_controller_3/: Adafruit_ItsyBitsy_M0.hpp  board.h  flt_controller_3.ino
reorg/arduino/simple_test/: simple_test.ino
reorg/dev/naze32/: test.py
reorg/dev/src/cpp/: servo_test.c
reorg/gecko2/arduino/yivo-data/: MadgwickAHRS.cpp  MadgwickAHRS.hpp  controller.hpp  sensor_suite.hpp  yivo-data.ino
reorg/gecko2/arduino/yivo-data/old/: imu.hpp  tf.hpp
reorg/gecko2/python/: gui-curses.py  joystick.py  test.py  yivo_msgs.py  yivo_parser.py
reorg/python/: keyboard.py  telemetry.py
reorg/video_odometry/arduino/arducam-qtpy/: imu.hpp  sensor.hpp
reorg/video_odometry/cpp/: CMakeLists.txt  common.hpp  rectify.cpp  save.cpp  serialize.cpp
reorg/video_odometry/jupyter/arducam/: grab.py  sensor_camera.py
reorg/video_odometry/jupyter/misc/: image-exif.ipynb
reorg/video_odometry/jupyter/mono-vo/: opticalflow1.py
sim/: quadcopter-sim.ipynb
src/python/: esc.py
tools/: get_data.py  messages.py
tools/gui/: cal.txt  gui-curses.py
tools/ncurses/: cal.npy
tools/pygame/: debug.py  horizon.py  messages.py
video_odometry/arduino/arducam-qtpy/: arducam-qtpy.ino
video_odometry/cpp/: flow.cpp
video_odometry/get-data/: grab.py
video_odometry/get-data/data/calib/: calib.yml
video_odometry/jupyter/: helpers.py
video_odometry/jupyter/arducam/: camera_setup.py  playback.py  stereo-camera-grab.py
video_odometry/jupyter/misc/: flow.ipynb  helpers.py  opticalflow1.py
video_odometry/jupyter/stereo-camera-design/: camera-calcs.ipynb
video_odometry/jupyter/stereo-vo/: stereo-vo-2.ipynb  stereo-vo-3.ipynb  stereo-vo.ipynb  vo.py
